--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <h1>
             All power is with in you!!!
             You can do anything and everything
+            Thank you
         </h1>
     </body>
 </html>
